--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -23,7 +23,7 @@ const socialCount = SOCIALS.filter(social => social.active).length;
   <Header />
   <main id="main-content">
     <section id="hero">
-      <h1>Mingalaba</h1>
+      <h1>Grow Your Business by Retaining More Customers</h1>
       <a
         target="_blank"
         href="/rss.xml"
@@ -42,19 +42,7 @@ const socialCount = SOCIALS.filter(social => social.active).length;
       </a>
 
       <p>
-        AstroPaper is a minimal, responsive, accessible and SEO-friendly Astro
-        blog theme. This theme follows best practices and provides accessibility
-        out of the box. Light and dark mode are supported by default. Moreover,
-        additional color schemes can also be configured.
-      </p>
-      <p>
-        Read the blog posts or check
-        <LinkButton
-          className="underline decoration-dashed underline-offset-4 hover:text-skin-accent"
-          href="https://github.com/satnaing/astro-paper#readme"
-        >
-          README
-        </LinkButton> for more info.
+        Welcome to our blog. At Next Wave, we provide a system for businesses to grow their business without needing to acquire new customers. Existing customers can be engaged more often so they come back more often and spend more. Referral marketing and review generation can organically bring in more customers without having to spend on ads. We'll share specific strategies and scripts you can use to grow your business rapidly and profitably.
       </p>
       {
         // only display if at least one social link is enabled
